[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/sprites/icons.png" type="Texture" id=1]
[ext_resource path="res://scripts/map/MapPath.gd" type="Script" id=2]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 64, -64 )
}

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 32, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 48, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 64, 16, 16, 16 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[node name="MapPath" type="Path2D"]
curve = SubResource( 1 )
script = ExtResource( 2 )

[node name="MapTravel" type="PathFollow2D" parent="."]
rotation = -0.785398
loop = false

[node name="MapLine" type="Line2D" parent="."]
width = 2.0

[node name="FlagSprite" type="AnimatedSprite" parent="."]
position = Vector2( 64, -64 )
frames = SubResource( 8 )
frame = 3
playing = true
offset = Vector2( 0, -8 )
